--- a/00-bootcamp-project/pyproject.toml
+++ b/00-bootcamp-project/pyproject.toml
@@ -9,6 +9,7 @@ python = "3.10.13"
 requests = "2.29.0"
 pysftp = "0.2.9"
 psycopg2 = "2.9.6"
+google-cloud-bigquery = "^3.17.2"
 
 [tool.poetry.dev-dependencies]
 
